--- a/404.html
+++ b/404.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>pear3</title>
 <style>
-
+body {
+  background-color:#eef2ff;
+  }
+  
+img {
+    height: auto; 
+    width: auto; 
+    max-width: 300px; 
+    max-height: 300px;
+ }
 </style>
+</head>
 <h1> pear3 </h1>
 <body>
-
+<a href=https://pear3.github.io/index.html><img class=pearimage src=images/pears.png></a>
+<p>click any of the pears to continue</p>
 </body>
 </html>
