--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>pear3</title>
 <style>
 body {
   background-color:#eef2ff;
   }
 </style>
+</head>
 <h1> pear3 </h1>
 <body>
 
