--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ img {
 <h1> pear3 </h1>
 <body>
 <a href=https://pear3.github.io/index.html><img class=pearimage src=images/pears.png></a>
-<p>click any of the pears to continue</p>
+<p>click on of the pears to continue</p>
 </body>
 </html>
