--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ img {
 </head>
 <h1> pear3 </h1>
 <body>
-<a href=https://pear3.github.io/index.html><img class=pearimage src=images/pears.png></a>
-<p>click on of the pears to continue</p>
+<a href=https://pear3.github.io/home.html><img class=pearimage src=images/pears.png></a>
+<p>click on the pear to continue</p>
 </body>
 </html>
