--- a/index.html
+++ b/index.html
@@ -3,21 +3,34 @@
 <head>
 <title>pear3</title>
 <style>
-body {
-  background-color:#eef2ff;
+html {
+  background-image: url("images/hotairballoon.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center; 
   }
   
-img {
-    height: auto; 
-    width: auto; 
-    max-width: 300px; 
-    max-height: 300px;
- }
+.card {
+ border-radius: 8px;
+ backdrop-filter: blur(20px);
+ background-color: (255, 255, 255, 0.5);
+ box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
+ border: 1px solid (255, 255, 255, 0.3);
+ padding: 4px 16px;
+ display: inline-block;
+ margin-bottom: 20px;
+ margin-top: 20px;
+}
 </style>
 </head>
-<h1> pear3 </h1>
 <body>
-<a href=https://pear3.github.io/home.html><img class=pearimage src=images/pears.png></a>
-<p>click on the pear to continue</p>
+<div class="card">
+<h1>pear3</h1>
+</div>
+<br>
+<div class="card">
+<h1>there's nothing here for now as i have exams and making this is as far as i'll go with making stuff to avoid working_</h1>
+</div>
 </body>
 </html>
