--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ html {
  display: inline-block;
  margin-bottom: 20px;
  margin-top: 20px;
+ margin-left: 20px;
+ margin-right: 20px;
 }
 </style>
 </head>
