--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ html {
   background-size: cover;
   background-attachment: fixed;
   background-position: center; 
+  font-family: Arial;
   }
   
 .card {
