--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@ html {
 </style>
 </head>
 <body>
-<div class="card">
+<a href="https://www.github.com/pear3"><div class="card">
 <h1>pear3</h1>
 </div>
+</a>
 <br>
 <div class="card">
 <h1>there's nothing here for now as i have exams and making this is as far as i'll go with making stuff to avoid working_</h1>
