--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html {
 </head>
 <body>
 <a href="https://www.github.com/pear3"><div class="card">
-<h1>pear3</h1>
+<h1><font color="black">pear3</font></h1>
 </div>
 </a>
 <br>
