--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>pear3</title>
 <style>
 html {
-  background-image: url("images/hotairballoon.png");
+  background-image: url("images/qqqqqqqbg.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -28,8 +28,8 @@ html {
 </style>
 </head>
 <body>
-<a href="https://www.github.com/pear3"><div class="card">
-<h1><font color="black">pear3</font></h1>
+<a href="https://qqqqqqq.org"><div>
+<h1><img src="images/qqqqqqq.org"></h1>
 </div>
 </a>
 <br>
