--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html {
 </head>
 <body>
 <a href="https://qqqqqqq.org"><div>
-<h1><img src="images/qqqqqqq.org"></h1>
+<h1><img src="images/qqqqqqq.png"></h1>
 </div>
 </a>
 <br>
