--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>pear3</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>qqqqqqq</title>
 <style>
 html {
   background-image: url("images/qqqqqqqbg.png");
