--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>pear3</title>
 <style>
-html {
+body {
   background-image: url("images/qqqqqqqbg.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -25,10 +25,16 @@ html {
  margin-left: 20px;
  margin-right: 20px;
 }
+
+.logo {
+	margin: auto;
+	width: auto;
+	} 
+	
 </style>
 </head>
 <body>
-<a href="https://qqqqqqq.org"><div>
+<a href="https://qqqqqqq.org"><div class="logo">
 <h1><img src="images/qqqqqqq.png"></h1>
 </div>
 </a>
@@ -36,5 +42,74 @@ html {
 <div class="card">
 <h1>there's nothing here for now as i have exams and making this is as far as i'll go with making stuff to avoid working_</h1>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1> wiener</h1>
 </body>
 </html>
