--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 <title>qqqqqqq</title>
 <style>
+	
 body {
   background-image: url("images/qqqqqqqbg.png");
   background-repeat: no-repeat;
@@ -33,84 +36,19 @@ body {
 	} 
 	
 </style>
+	
 </head>
+	
 <body>
-<a href="https://qqqqqqq.org"><div class="logo">
-<h1><img src="images/qqqqqqq.png"></h1>
-</div>
+<a href="https://qqqqqqq.org">
+	<div class="logo"><img src="images/qqqqqqq.png"></div>
 </a>
+	
 <br>
+	
 <div class="card">
 <h1>there's nothing here for now as i have exams and making this is as far as i'll go with making stuff to avoid working_</h1>
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h1> wiener</h1>
+
 </body>
 </html>
