--- a/index.html
+++ b/index.html
@@ -1,54 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
 <title>qqqqqqq</title>
 <style>
-	
-body {
-  background-image: url("images/qqqqqqqbg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center; 
-  font-family: Arial;
-  }
-  
-.card {
- border-radius: 8px;
- backdrop-filter: blur(20px);
- background-color: (255, 255, 255, 0.5);
- box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
- border: 1px solid (255, 255, 255, 0.3);
- padding: 4px 16px;
- display: inline-block;
- margin-bottom: 20px;
- margin-top: 20px;
- margin-left: 20px;
- margin-right: 20px;
+
+.noise {
+	background-color: #F6995C;
+	background-image: url("images/noise.svg");
 }
-
-.logo {
-	margin: auto;
-	width: auto;
-	} 
-	
 </style>
-	
 </head>
-	
-<body>
-<a href="https://qqqqqqq.org">
-	<div class="logo"><img src="images/qqqqqqq.png"></div>
-</a>
-	
-<br>
-	
-<div class="card">
-<h1>there's nothing here for now as i have exams and making this is as far as i'll go with making stuff to avoid working_</h1>
-</div>
 
+<body class="noise">
+<h1>pear3</h1>
+</html>
 </body>
 </html>
