--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>qqqqqqq</title>
+<title>pear3</title>
 <style>
 
 .noise {
@@ -13,7 +13,7 @@
 </head>
 
 <body class="noise">
-<h1>pear3</h1>
+<h1><a href="https://pear3.github.io">pear3</a></h1>
 </html>
 </body>
 </html>
