--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>c5ak</title>
+<title>about c5ak</title>
 <style>
 
 .noise {
@@ -13,8 +13,8 @@
 </head>
 
 <body class="noise">
-<h2><a href="https://pear3.github.io">github</a></h2>
+<h2>i just wanna make cool stuff</h2>
 <br><br><br>
-<h1 style="margin-left:5%;"><a href="about.html">about</a></h1>
+<h1 style="margin-left:5%;">if i do make cool stuff i'll have it to be seen here and ideally i'll have lots of cool stuff</h1>
 </body>
 </html>
