--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body class="noise">
+<div><img src="assets/c5ak.png"></div>
 <h2><a href="https://pear3.github.io">github</a></h2>
 <br><br><br>
 <h1 style="margin-left:5%;"><a href="about.html">about</a></h1>
