made the logo proper/centred that jawn

--- a/about.html
+++ b/about.html
@@ -4,7 +4,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>about c5ak</title>
 <style>
-
+.logo {
+	max-width: 100%;
+    max-height: 100vh;
+    margin: auto;;
+}
+.logobox {
+	display: grid;
+	height: 100%;
+	width: 100%;
+}
 .noise {
 	background-color: #F6995C;
 	background-image: url("assets/noise.svg");
@@ -13,6 +22,7 @@
 </head>
 
 <body class="noise">
+<div class="logobox"><img class="logo" src="assets/c5ak.png"></div>
 <h2>i just wanna make cool stuff</h2>
 <br><br><br>
 <h1 style="margin-left:5%;">if i do make cool stuff i'll have it to be seen here and ideally i'll have lots of cool stuff</h1>
