--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>c5ak</title>
 <style>
-
+.logo {
+	max-width: 100%;
+    max-height: 100vh;
+    margin: auto;;
+}
+.logobox {
+	display: grid;
+	height: 100%;
+	width: 100%;
+}
 .noise {
 	background-color: #F6995C;
 	background-image: url("assets/noise.svg");
@@ -13,7 +22,7 @@
 </head>
 
 <body class="noise">
-<div><img src="assets/c5ak.png"></div>
+<div class="logobox"><img class="logo" src="assets/c5ak.png"></div>
 <h2><a href="https://pear3.github.io">github</a></h2>
 <br><br><br>
 <h1 style="margin-left:5%;"><a href="about.html">about</a></h1>
