--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <body class="noise">
 <div class="logobox"><img class="logo" src="assets/c5ak.png"></div>
-<h2><a href="https://pear3.github.io">github</a></h2>
+<h2><a href="https://github.com/eorj">github</a></h2>
 <br><br><br>
-<h1 style="margin-left:5%;"><a href="about.html">about</a></h1>
+<h1 style="margin-left:5%;">is this anything</h1>
 </body>
 </html>
