--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>c5ak</title>
 <style>
-.logo {
-	max-width: 100%;
-    max-height: 100vh;
-    margin: auto;;
+.title {
+	font-size: 45px;
+    margin-left: 10%;
 }
-.logobox {
-	display: grid;
-	height: 100%;
-	width: 100%;
+.subtitle {
+	font-size: 25px;
+    margin-left: 5%;
 }
 .noise {
 	background-color: #F6995C;
@@ -22,8 +20,8 @@
 </head>
 
 <body class="noise">
-<h2><a href="https://github.com/eorj">github</a></h2>
+<h1 class="title">c5ak.com</h1>
 <br><br><br>
-<h1 style="margin-left:5%;">is this anything</h1>
+<p class="subtitle">hello</p>
 </body>
 </html>
