--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@ button {
 .active, .collapsible:hover {
   color: #638889;
 }
+.collapsible:after {
+  content: '\02304';
+  font-size: 12px;
+  color: black;
+  margin-left: 5px;
+}
+.active:after {
+  content: "\2303";
+}
 </style>
 </head>
 
