--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>c5ak</title>
-<link rel="icon" type="image/x-icon" href="/assets/ico.png">
+<link rel="icon" type="image/x-icon" href="favicon.png">
 <style>
 .title {
 	font-size: 45px;
