--- a/index.html
+++ b/index.html
@@ -86,3 +86,5 @@ for (i = 0; i < coll.length; i++) {
 </script>
 </body>
 </html>
+
+<!--if the page requires scrolling bump up the size of the cvg to avoid the little gap-->
